# bamsplice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  annotation_reader.cpp  bam_ex_1.bam  bam_ex_1.bam.bai  bam_reader.cpp  interval_map.cpp  main.cpp  rpkm_calculation.cpp  sam_ex_1.sam  tab_del_ex_1  todo
data/ex_1/: ex_1.sam  gen_bam.sh
include/: annotation_reader.h  bam_reader.h  interval_map.h  rpkm_calculation.h  string_tools.h  test.h  thread.h
include/api/: BamAlignment.h
lib/: libbamtools.2.4.1.dylib  libbamtools.dylib
src/: annotation_reader.cpp  bam_reader.cpp  interval_map.cpp  main.cpp  rpkm_calculation.cpp  test.cpp  thread.cpp
tests/: weight_array.sh
